# csci_4022_project

./: README.md  cleaned_random_graph_analysis.ipynb  main.ipynb  main.py  pyproject.toml  requirements.txt  requriements.txt
results/raw/: graph_level_results.pkl  intervention_results.pkl  intervention_summary.pkl  node_level_results.pkl  paired_comparisons.pkl
results/tables/: graph_level_results.csv  intervention_results.csv  intervention_summary.csv  node_level_results.csv  paired_comparisons.csv  static_summary.csv
src/: config.py  graph_generator.py
src/analysis/: clustering.py  experiments.py  features.py  graph_models.py  metrics.py  reduction.py
src/plotting/: visualization.py
src/simulation/: diffusion.py  interventions.py
test/: graph_test.py
